added Course Post,course Detail get,Course thubmnail get Routes #21 Co-authored-by: arpitjaswal<iamarpitjaswal@gmail.com>

--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,1 +1,2 @@
-DB_URL=mongodb+srv://sheryjain:Classical%402@cluster0.lx6ol.mongodb.net/e-learning?retryWrites=true&w=majority
+DB_URL=mongodb://localhost:27017/e-learning?retryWrites=true&w=majority
+#DB_URL=mongodb+srv://sheryjain:Classical%402@cluster0.lx6ol.mongodb.net/e-learning?retryWrites=true&w=majority
