--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -12,14 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "express-fileupload": "^1.3.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
     "mongoose": "^6.2.7",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15"
   }
 }
