--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,1 +1,3 @@
 DB_URL=mongodb+srv://sheryjain:Classical%402@cluster0.lx6ol.mongodb.net/e-learning?retryWrites=true&w=majority
+AUTH_EMAIL=snjain990@gmail.com
+AUTH_PASS=hhpglzkerjnpanif
