--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -11,15 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
     "mongoose": "^6.2.7",
-    "nodemon": "^2.0.15"
+    "morgan": "^1.9.1",
+    "nodemailer": "^6.7.3",
+    "nodemon": "^2.0.15",
+    "uuid": "^8.3.2"
   }
 }
