--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -19,6 +19,7 @@
     "express": "~4.16.1",
     "express-fileupload": "^1.3.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^4.5.0",
     "mongoose": "^6.2.7",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
