--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -27,6 +27,8 @@
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "gridfs-stream": "^1.1.1",
+    "multer-gridfs-storage": "^5.0.2"
   }
 }
