--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -15,17 +15,19 @@
     "body-parser": "^1.19.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^8.5.1",
+
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "express-fileupload": "^1.3.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^4.5.0",
     "mongoose": "^6.2.7",
     "morgan": "^1.9.1",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
-    "uuid": "^8.3.2",
-    "mongodb": "^4.5.0",
-    "multer": "^1.4.4"
+    "uuid": "^8.3.2"
   }
 }
