--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,9 +16,10 @@
     "react-dom": "^17.0.2",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^2.1.3",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "source-map-resolve": "^0.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
