--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.0.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
