--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,11 +12,11 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.2.2",
+    "react-bootstrap": "^2.2.2", 
     "react-dom": "^17.0.2",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.0",
     "react-slick": "^0.29.0",
     "react-to-pdf": "^0.0.14",
     "slick-carousel": "^1.8.1",
