--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -22,6 +22,7 @@
     "express-fileupload": "^1.3.1",
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
+    "jest": "^28.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.7",
