--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -6,7 +6,11 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "nodemonStart": "nodemon ./bin/www"
+    "nodemonStart": "nodemon ./bin/www",
+    "test": "jest"
+  },
+  "jest": {
+    "testEnviroment": "node"
   },
   "author": "",
   "license": "ISC",
@@ -24,13 +28,14 @@
     "http-errors": "~1.6.3",
     "jest": "^28.1.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.5.0",
+    "mongodb": "^3.6.3",
     "mongoose": "^6.2.7",
     "morgan": "^1.9.1",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
+    "supertest": "^6.2.3",
     "uuid": "^8.3.2"
   }
 }
