--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,5 +1,7 @@
 DB_URL=mongodb+srv://sheryjain:Classical%402@cluster0.lx6ol.mongodb.net/e-learning?retryWrites=true&w=majority
-DB_URL_MONGO=mongodb+srv://sheryjain:Classical%402@cluster0.lx6ol.mongodb.net/
+# DB_URL_MONGO=mongodb+srv://sheryjain:Classical%402@cluster0.lx6ol.mongodb.net/
+# DB_URL=mongodb://localhost:27017/testjest
+DB_URL_MONGO=mongodb://localhost:27017/
 AUTH_EMAIL=snjain990@gmail.com
 AUTH_PASS=hhpglzkerjnpanif
 SECRET=e_learning_platform
